--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fellwanderers</title>
+    <title>Imperial Fellwanderers</title>
+    <meta name="description" content="We are Fellwanderers, the hiking society for Imperial College London -
+    your gateway to discovering the breathtaking landscapes and hidden gems of the United Kingdom while studying at Imperial."/>
   </head>
   <body>
     <div id="root"></div>
